fix(console): align button icon size to 20

--- a/packages/console/src/components/Button/index.module.scss
+++ b/packages/console/src/components/Button/index.module.scss
@@ -19,8 +19,8 @@
 
   .icon {
     display: block;
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
 
     &:not(:last-child) {
       margin-right: _.unit(2);
